# deal_room

./: .gitignore  Dockerfile  Dockerfile.huggingface  Dockerfile.local  Makefile  README.md  TEST_EXECUTION_REPORT.md  __init__.py  calibrate.py  client.py  deal_room_v4_clean.py  dealroom_v4_benchmark_report.md  deep_analysis.py  deploy.sh  inference.py  models.py  openenv.yaml  plan.md  pyproject.toml  red_team_exploits.py  requirements.txt  test_belief_validation.py  test_cvar_veto.py  test_section_0_health.py  test_section_10_training.py  test_section_11_research_properties.py  test_section_1_schema.py  test_section_2_rewards.py  test_section_3_causal_inference.py  test_section_4_cvar.py  test_section_5_isolation.py  test_section_6_probabilistic.py  test_section_7_causal_graph.py  test_section_8_cvar.py  test_section_9_full_episodes.py  testing_v3.2.md  validate_v4.py  verify_causal_bug.py
.playwright-mcp/: page-2026-04-09T11-39-07-573Z.yml  page-2026-04-09T11-39-23-298Z.yml  page-2026-04-09T11-39-41-153Z.yml  page-2026-04-09T11-40-01-481Z.yml  page-2026-04-09T11-40-17-278Z.yml  page-2026-04-09T11-40-47-951Z.yml  page-2026-04-09T12-06-49-394Z.yml  (+55 more)
deal_room/: __init__.py
email_negotiation/: Dockerfile  README.md  client.py  models.py  openenv.yaml  pyproject.toml
email_negotiation/notebooks/: 05_llm_training.ipynb  email_negotiation_training.ipynb
email_negotiation/server/: app.py  environment.py
email_negotiation/server/email_env/: anti_gaming.py  buyer_stakeholder.py  email_message.py  email_negotiation.py  inbox.py  progress_score.py  reward_extractor.py
(+68 files in other folders)
